--- a/10-store/src/index.css
+++ b/10-store/src/index.css
@@ -5,3 +5,13 @@
   height: 300px;
   object-fit: cover;  
 }
+
+.product-dest {
+  min-height: 80px;
+}
+
+.read-more-button {
+  cursor: pointer;
+  color: blue;
+  text-decoration: underline;
+}
