homework just finish

--- a/Homework/01/src/app/App.css
+++ b/Homework/01/src/app/App.css
@@ -1,10 +1,28 @@
-.img-nice:hover {
-    border: 1px solid rgb(255, 249, 85);
-    cursor: pointer;
-    margin: 5px;
+body {
+    background: linear-gradient(to right, rgb(255, 144, 144), rgb(253, 255, 164));
 }
 
-.img-nice {
-    border: 1px solid white;
+.link-react {
+    border: 3px solid white;
     transition: 0.2s;
+}
+
+.link-react:hover {
+    border: 3px solid rgb(58, 58, 58);
+    box-shadow: 0 0 10px black;
+}
+
+.title {
+    box-shadow: 3px 3px 3px rgb(63, 63, 63);
+    background-color: rgb(63, 63, 63);
+    width: 20%;
+    margin: 10px auto;
+    padding: 15px;
+    color: white;
+    transition: 0.2s;
+}
+
+.title:hover {
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgb(0, 0, 0);
 }
